# Bioinf-Algo-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-03-17-lecture-04-graph-algorithms.md
lectures/: LECTURE_TEMPLATE.md
lectures/lecture_01/clump_finding/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/frequent_words/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/frequent_words_mismatches/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/hamming_distance/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/minimum_skew/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/pattern_count/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/pattern_matching/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_01/reverse_complement/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/approximate_pattern_matching/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/d_neighborhood/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/frequency_array/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/frequent_words_mismatches_complements/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/number_to_pattern/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_02/pattern_to_number/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_03/distance_pattern_strings/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2h.txt
lectures/lecture_03/gibbs_sampler/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2g.txt
lectures/lecture_03/greedy_motif_search/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2e.txt
lectures/lecture_03/median_string/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2b.txt
lectures/lecture_03/motif_enumeration/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2a.txt
lectures/lecture_03/profile_most_probable/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2c.txt
lectures/lecture_03/randomized_motif_search/: CMakeLists.txt  README.md  main.cpp  rosalind_ba2f.txt
lectures/lecture_04/ba3a-string_composition/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_04/ba3b-genome_path_string/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_04/ba3c-overlap_graph/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_04/ba3d-de_bruijn_string/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_04/ba3e-de_bruijn_kmers/: CMakeLists.txt  README.md  main.cpp
lectures/lecture_04/ba3f-eulerian_cycle/: CMakeLists.txt  README.md  main.cpp
